--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -26,40 +26,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="#F9F9F9"
             >
-
-            <RelativeLayout
+            <com.oragee.banners.BannerView
+                android:id="@+id/vp_banner"
+                android:background="#F0F0F0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/vp_banner"
-                    android:layout_width="match_parent"
-                    android:background="#FFF2ED"
-                    android:layout_height="180dp" />
-                <LinearLayout
-                    android:id="@+id/points"
-                    android:layout_alignBottom="@id/vp_banner"
+                android:layout_height="180dp"
+                android:layout_marginBottom="20dp">
+            </com.oragee.banners.BannerView>
+
+            <ListView
+                android:id="@+id/lv_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:padding="5dp"
-                    android:orientation="horizontal" >
-                </LinearLayout>
-
-            </RelativeLayout>
-
-            <View
-                android:layout_marginTop="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="#666666" />
-
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:textColor="#666666"
+                    android:text="@string/show_more"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+
 
 </LinearLayout>
