--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
@@ -44,11 +44,195 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ll_live"
+                android:paddingTop="15dp"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="#FFFFFF"
+                android:layout_height="match_parent"
+                android:background="@drawable/round_card_write"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/tv_live"
+                    android:textSize="18sp"
+                    android:textColor="#333333"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/is_living" />
+                <View
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center"
+                    android:layout_width="20dp"
+                    android:layout_height="2dp"
+                    android:background="#d6d6d6" />
+
+                <ListView
+                    android:id="@+id/lv_live"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
+                <RelativeLayout
+                    android:id="@+id/re_more_live"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#FFFFFF"
+                    android:onClick="more">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:fontFamily="华文黑体"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/showmore"
+                        android:textColor="#666666" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toEndOf="@id/textView2"
+                        android:layout_centerVertical="true"
+                        android:alpha="0.2"
+                        android:src="@mipmap/cd1" />
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_new"
+                android:paddingTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/round_card_write"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_new"
+                    android:textSize="18sp"
+                    android:textColor="#333333"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/course_new" />
+                <View
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center"
+                    android:layout_width="20dp"
+                    android:layout_height="2dp"
+                    android:background="#d6d6d6" />
+
+                <ListView
+                    android:id="@+id/lv_new"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
+                <RelativeLayout
+                    android:id="@+id/re_more_new"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#FFFFFF"
+                    android:onClick="more">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:fontFamily="华文黑体"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/showmore"
+                        android:textColor="#666666" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toEndOf="@id/textView3"
+                        android:layout_centerVertical="true"
+                        android:alpha="0.2"
+                        android:src="@mipmap/cd1" />
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_top"
+                android:paddingTop="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/round_card_write"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_top"
+                    android:textSize="18sp"
+                    android:textColor="#333333"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/course_top" />
+                <View
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center"
+                    android:layout_width="20dp"
+                    android:layout_height="2dp"
+                    android:background="#d6d6d6" />
+
+                <ListView
+                    android:id="@+id/lv_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
+                <RelativeLayout
+                    android:id="@+id/re_more_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#FFFFFF"
+                    android:onClick="more">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:fontFamily="华文黑体"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/showmore"
+                        android:textColor="#666666" />
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toEndOf="@id/textView4"
+                        android:layout_centerVertical="true"
+                        android:alpha="0.2"
+                        android:src="@mipmap/cd1" />
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="#d6d6d6" />
             </LinearLayout>
 
         </LinearLayout>
