--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -25,6 +25,7 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#F0F0F0"
         >
 
         <LinearLayout
@@ -43,6 +44,8 @@
 
             <ListView
                 android:id="@+id/lv_information"
+                android:divider="#FFFFFF"
+                android:dividerHeight="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <LinearLayout
