--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -42,7 +42,7 @@
                 android:layout_marginBottom="20dp">
             </com.oragee.banners.BannerView>
 
-            <ListView
+            <com.fstech.yzedusc.view.MyListView
                 android:id="@+id/lv_information"
                 android:divider="#FFFFFF"
                 android:dividerHeight="0dp"
