--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
@@ -18,4 +18,9 @@
             />
     </FrameLayout>
 
+    <com.qmuiteam.qmui.widget.QMUICollapsingTopBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></com.qmuiteam.qmui.widget.QMUICollapsingTopBarLayout>
+
 </LinearLayout>
