修改了卡片的样式，完成了院校部分列表

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/styles.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/qmui_config_color_blue</item>
     </style>
 
     <style name="tab_menu_item">
