--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
@@ -35,7 +35,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F2F2F2">
+        android:background="#F9F9F9">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:paddingTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/round_card_write"
+                android:background="#F9F9F9"
                 android:orientation="vertical">
 
                 <TextView
@@ -70,16 +70,11 @@
                     android:divider="#FFFFFF"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.1dp"
-                    android:background="#d6d6d6" />
                 <RelativeLayout
                     android:id="@+id/re_more_live"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="#FFFFFF"
-                    android:onClick="more">
+                    android:background="#F9F9F9">
 
                     <TextView
                         android:id="@+id/textView2"
@@ -113,7 +108,7 @@
                 android:paddingTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/round_card_write"
+                android:background="#F9F9F9"
                 android:orientation="vertical">
 
                 <TextView
@@ -144,8 +139,7 @@
                     android:id="@+id/re_more_new"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="#FFFFFF"
-                    android:onClick="more">
+                    android:background="#F9F9F9">
 
                     <TextView
                         android:id="@+id/textView3"
@@ -179,7 +173,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/round_card_write"
+                android:background="#F9F9F9"
                 android:orientation="vertical">
 
                 <TextView
@@ -210,8 +204,7 @@
                     android:id="@+id/re_more_top"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="#FFFFFF"
-                    android:onClick="more">
+                    android:background="#F9F9F9">
 
                     <TextView
                         android:id="@+id/textView4"
