--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -18,4 +18,9 @@
             />
     </FrameLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
+
 </LinearLayout>
