--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
@@ -37,24 +37,26 @@
                     android:id="@+id/iv_school_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_above="@+id/tv_school_name"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginStart="20dp"
                     app:qmui_border_width="0dp"
                     app:qmui_is_circle="true"
                     app:srcCompat="@drawable/newmsg01" />
 
                 <TextView
                     android:id="@+id/tv_school_name"
-                    android:layout_width="200dp"
+                    android:layout_width="match_parent"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:background="#50000000"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/iv_school_image"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginBottom="18dp"
-                    android:layout_marginEnd="40dp"
-                    android:text="XX测试院校"
                     android:gravity="right"
+                    android:text="XX测试院校"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
 
@@ -74,7 +76,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@android:id/tabs"
-                        android:background="#F2F2F2"
+                        android:background="#FFFFFF"
                         ></TabWidget>
 
                     <FrameLayout
