--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
@@ -18,19 +18,21 @@
             />
     </FrameLayout>
 
-    <SearchView
-        android:id="@+id/searchView"
+    <EditText
+        android:id="@+id/et_search"
         android:background="#F0F0F0"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
+        android:hint="@string/input_search_content"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:editable="false"
         android:layout_height="30dp"
         android:backgroundTint="#F2F2F2"
-        android:clickable="true"
-        android:searchIcon="@mipmap/left_search"
-        android:iconifiedByDefault="false" />
+        android:clickable="true" />
 
     <ScrollView
         android:layout_width="match_parent"
