--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -23,6 +23,7 @@
         android:layout_height="0.1dp"
         android:background="#d6d6d6" />
     <ScrollView
+        android:id="@+id/sv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#F0F0F0"
