--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -81,6 +81,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:orientation="horizontal">
+                <View
+                    android:layout_width="0.1dp"
+                    android:layout_height="match_parent"
+                    android:background="#d6d6d6" />
                 <RelativeLayout
                     android:id="@+id/main_re_temperature"
                     android:layout_width="0dp"
@@ -127,6 +131,10 @@
                         android:text="综合实训"
                         android:textSize="13dp" />
                 </RelativeLayout>
+                <View
+                    android:layout_width="0.1dp"
+                    android:layout_height="match_parent"
+                    android:background="#d6d6d6" />
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
@@ -141,6 +149,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:orientation="horizontal">
+                <View
+                    android:layout_width="0.1dp"
+                    android:layout_height="match_parent"
+                    android:background="#d6d6d6" />
                 <RelativeLayout
                     android:id="@+id/main_re_production_back"
                     android:layout_width="0dp"
@@ -187,6 +199,10 @@
                         android:text="成绩查询"
                         android:textSize="13dp" />
                 </RelativeLayout>
+                <View
+                    android:layout_width="0.1dp"
+                    android:layout_height="match_parent"
+                    android:background="#d6d6d6" />
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
