--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_course_list.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_course_list.xml
@@ -29,6 +29,7 @@
             <TextView
                 android:id="@+id/item_course_list_tv_name"
                 android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
                 android:maxLines="1"
                 android:layout_height="wrap_content"
                 android:text="课程名称" />
