--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_person.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_person.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/qmui_config_color_blue">
+        android:background="@color/colorPrimary">
 
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
             android:id="@+id/iv_avatar"
