--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_classification.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_classification.xml
@@ -7,8 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@color/qmui_config_color_blue"
-        android:layout_height="50dp" >
+        android:background="@color/colorPrimary"
+        android:layout_height="45dp" >
 
         <ImageView
             android:id="@+id/imageView1"
