--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -1,209 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#F9F9F9"
     android:orientation="vertical">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/qmui_config_color_blue">
+        android:layout_height="45dp"
+        android:background="@color/colorPrimary">
+
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/learn"
             android:layout_gravity="center"
-            android:textSize="22sp"
+            android:text="@string/learn"
             android:textColor="#FFFFFF"
-            />
+            android:textSize="22sp" />
     </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/round_card_write"
-            android:orientation="vertical">
+            android:background="#FFFFFF"
+            app:cardCornerRadius="@dimen/dimen_9dp">
 
-            <ImageView
-                android:id="@+id/iv_read_image"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/aixinbanmaxian" />
-
-            <TextView
-                android:id="@+id/tv_read_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="10dp"
-                android:maxLines="3"
-                android:text="书籍是人类进步的阶梯"
-                android:textColor="#666666" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_read_date"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="2018-03-25"
-                android:textColor="#999999" />
+                <ImageView
+                    android:id="@+id/iv_read_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/aixinbanmaxian" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_read_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp"
+                    android:maxLines="3"
+                    android:text="书籍是人类进步的阶梯"
+                    android:textColor="#666666" />
+
+                <TextView
+                    android:id="@+id/tv_read_date"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="2018-03-25"
+                    android:textColor="#999999" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginBottom="15dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="15dp"
             android:orientation="vertical">
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:background="#d6d6d6" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:orientation="horizontal">
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
+
                 <RelativeLayout
                     android:id="@+id/main_re_temperature"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@mipmap/learn_mycourse"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="10dp"
+                        android:src="@mipmap/learn_mycourse" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="80dp"
                         android:text="我的课程"
                         android:textSize="13dp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
+
                 <RelativeLayout
                     android:id="@+id/main_re_oxygen"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@mipmap/learn_myexercise"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="10dp"
+                        android:src="@mipmap/learn_myexercise" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="80dp"
                         android:text="综合实训"
                         android:textSize="13dp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:background="#d6d6d6" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:layout_marginTop="15dp"
                 android:background="#d6d6d6" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:orientation="horizontal">
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
+
                 <RelativeLayout
                     android:id="@+id/main_re_production_back"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@mipmap/learn_mytask"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="10dp"
+                        android:src="@mipmap/learn_mytask" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="80dp"
                         android:text="我的任务"
                         android:textSize="13dp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
+
                 <RelativeLayout
                     android:id="@+id/main_re_qulity"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@mipmap/learn_mygrade"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"/>
+                        android:layout_marginLeft="10dp"
+                        android:src="@mipmap/learn_mygrade" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="80dp"
                         android:text="成绩查询"
                         android:textSize="13dp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="0.1dp"
                     android:layout_height="match_parent"
                     android:background="#d6d6d6" />
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
