--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
@@ -4,51 +4,57 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/round_card_write"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="#FFFFFF"
+        app:cardCornerRadius="@dimen/dimen_9dp">
 
-        <ImageView
-            android:id="@+id/iv_information_image"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/aixinbanmaxian" />
-
-        <TextView
-            android:id="@+id/tv_information_title"
-            android:textSize="16sp"
-            android:layout_marginTop="15dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="关于新课Android上线通知" />
+            android:background="#FFFFFF"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_information_date"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textColor="#999999"
-            android:layout_gravity="right"
-            android:layout_margin="10dp"
-            android:text="2018-03-25" />
+            <ImageView
+                android:id="@+id/iv_information_image"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/aixinbanmaxian" />
 
-        <TextView
-            android:id="@+id/tv_information_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:maxLines="2"
-            android:layout_marginBottom="20dp"
-            android:textColor="#666666"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="这是咨询内容" />
+            <TextView
+                android:id="@+id/tv_information_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:text="关于新课Android上线通知"
+                android:textSize="16sp" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_information_date"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="10dp"
+                android:text="2018-03-25"
+                android:textColor="#999999" />
+
+            <TextView
+                android:id="@+id/tv_information_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:maxLines="2"
+                android:text="这是资讯内容"
+                android:textColor="#666666" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
