--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
@@ -4,79 +4,86 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/round_card_write"
-        android:orientation="vertical">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="#FFFFFF"
+        app:cardCornerRadius="@dimen/dimen_9dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/item_live_tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:paddingLeft="5dp"
-                android:text="直播标题1"
-                android:textColor="#333333" />
-
-            <TextView
-                android:id="@+id/item_live_tv_state"
-                android:layout_width="60dp"
-                android:layout_height="25dp"
-                android:layout_gravity="center"
-                android:background="@color/qmui_config_color_50_blue"
-                android:gravity="center"
-                android:text="直播中"
-                android:textColor="@color/qmui_config_color_white" />
-        </LinearLayout>
-
-        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
-            android:id="@+id/item_live_iv_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            app:qmui_corner_radius="@dimen/dimen_9dp"
-            app:qmui_is_circle="false"
-            app:srcCompat="@drawable/springmvc" />
+            android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="@string/live_room_id"
-                android:textColor="#999999" />
+                <TextView
+                    android:id="@+id/item_live_tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="直播标题1"
+                    android:textColor="#333333" />
 
-            <TextView
-                android:id="@+id/item_live_tv_room_id"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="100338234"
-                android:textColor="#999999" />
+                <TextView
+                    android:id="@+id/item_live_tv_state"
+                    android:layout_width="60dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:background="@color/qmui_config_color_50_blue"
+                    android:gravity="center"
+                    android:text="直播中"
+                    android:textColor="@color/qmui_config_color_white" />
+            </LinearLayout>
+
+            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
+                android:id="@+id/item_live_iv_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:qmui_corner_radius="@dimen/dimen_9dp"
+                app:qmui_is_circle="false"
+                app:srcCompat="@drawable/springmvc" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="@string/live_room_id"
+                    android:textColor="#999999" />
+
+                <TextView
+                    android:id="@+id/item_live_tv_room_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="100338234"
+                    android:textColor="#999999" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
