--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,40 @@
     <RadioGroup
         android:id="@+id/rg_tab_bar"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="#FFFFFF"
+        android:background="@color/Write"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/rb_main"
             style="@style/tab_menu_item"
-            android:drawableTop="@drawable/menu_main" />
+            android:drawableTop="@drawable/menu_main"
+            android:text="@string/index" />
 
         <RadioButton
             android:id="@+id/rb_course"
             style="@style/tab_menu_item"
-            android:drawableTop="@drawable/menu_course" />
+            android:drawableTop="@drawable/menu_course"
+            android:text="@string/course" />
 
         <RadioButton
             android:id="@+id/rb_learn"
             style="@style/tab_menu_item"
-            android:drawableTop="@drawable/menu_school" />
+            android:drawableTop="@drawable/menu_school"
+            android:text="@string/learn" />
 
         <RadioButton
             android:id="@+id/rb_school"
             style="@style/tab_menu_item"
-            android:drawableTop="@drawable/menu_mycourse" />
+            android:drawableTop="@drawable/menu_mycourse"
+            android:text="@string/school" />
 
         <RadioButton
             android:id="@+id/rb_person"
             style="@style/tab_menu_item"
-            android:drawableTop="@drawable/menu_personal" />
+            android:drawableTop="@drawable/menu_personal"
+            android:text="@string/person" />
 
     </RadioGroup>
 
