--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_course.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical" >
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="60dp"
+        android:paddingTop="15dp"
         android:background="@color/colorPrimary">
         <TextView
             android:id="@+id/textView1"
