--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -8,7 +8,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="60dp"
+        android:paddingTop="15dp"
         android:background="@color/colorPrimary">
 
         <TextView
@@ -102,11 +103,11 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/learn_mycourse" />
+                        android:src="@mipmap/learn_1" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -131,11 +132,11 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/learn_myexercise" />
+                        android:src="@mipmap/learn_4" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -182,11 +183,11 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/learn_mytask" />
+                        android:src="@mipmap/learn_3" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -211,11 +212,11 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
-                        android:src="@mipmap/learn_mygrade" />
+                        android:src="@mipmap/learn_2" />
 
                     <TextView
                         android:layout_width="wrap_content"
