--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,9 @@
     android:orientation="vertical" >
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorPrimary">
+        android:layout_height="60dp"
+        android:paddingTop="15dp"
+        android:background="@mipmap/my_top_bar">
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
